--- a/3/redBull NN Demo.ipynb
+++ b/3/redBull NN Demo.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b7174e4e",
+   "execution_count": 42,
+   "id": "143910cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5919b5e2",
+   "execution_count": 43,
+   "id": "5b9858a6",
    "metadata": {},
    "outputs": [
     {
@@ -306,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c947211d",
+   "execution_count": 44,
+   "id": "d939a0c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x18a477c5880>"
+       "<matplotlib.image.AxesImage at 0x18a4fda6ee0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +336,7 @@
     }
    ],
    "source": [
-    "img = cv.imread(\"RedBull.jpg\")\n",
+    "img = cv.imread(\"rbcanes/RedBull.jpg\")\n",
     "\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "\n",
@@ -345,8 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "dead5019",
+   "execution_count": 45,
+   "id": "a84b3a67",
    "metadata": {},
    "outputs": [
     {
@@ -372,11 +374,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "cd573b3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_file() got an unexpected keyword argument 'cashe_dir'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Temp/ipykernel_7792/1847747611.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"https://github.com/grdnrmzy/Jup/tree/main/3/rbcanes\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_file\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"rbcanes\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muntar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcashe_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'.'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcashe_subdir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mdataset_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rbcanes'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: get_file() got an unexpected keyword argument 'cashe_dir'"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://github.com/grdnrmzy/Jup/tree/main/3/rbcanes\"\n",
+    "dataset = tf.keras.utils.get_file (\"rbcanes\", url, untar = True, cashe_dir = '.', cashe_subdir = '')\n",
+    "dataset_dir = os.path.join(os.path.dirname(dataset), 'rbcanes')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "999c74bc",
+   "id": "0ed3241d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(train_images, train_labels), (test_images, test_labels) = datasets."
+   ]
   }
  ],
  "metadata": {
